--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ cryptg
 pyromod
 https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
 tgcrypto
+opencv-python-headless>=4.9.0.80
+opencv-python>=4.9.0.80
